--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,21 @@
     font-family: 'Poppins', sans-serif;
   }
   
+.box{
+    border: 2px solid #f0f0f0;
+    display: block;
+    border-radius: 10px;
+    font-size: 14px;
+    width: 100%;
+    padding: 10px;
+  }
+  #cpf{
+    display: none;
+  }
+  /* #cnpj{
+    display: none;
+  } */
+
   body {
     width: 100%;
     min-height: 100vh;
